# http-gateway

./: .gitignore  .gitmodules  .travis-key.json.enc  .travis.yml  App.test.toml  App.toml  App.toml.sample  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md  deploy.init.sh  http-gateway.yml  skaffold.yaml
.github/workflows/: build-dev-artifacts.yml  build-release-artifacts.yml  deploy.yml
chart/: Chart.yaml  sample.yaml  values.yaml
chart/templates/: _helpers.tpl  app-cm.yaml  headless-svc.yaml  pdb.yaml  sts.yaml
chart/templates/network/: cluster-svc.yaml
deploy/: docs.sh  run.sh
docker/: Dockerfile
docs/charts/: rpc_call  rpc_call.wsd
docs/diagrams/: rpc_call_sequence  rpc_call_sequence.wsd
docs/site/: index.html
docs/src/: SUMMARY.md  request.md
integration_tests/: App.toml  Cargo.toml  README.md
integration_tests/tests/: bridge_request.rs  send_event.rs
k8s/: _http-gateway-configmap.yml  http-gateway-config.yaml  http-gateway-environment.yaml  http-gateway-headless.yaml  http-gateway-ingress.yaml  http-gateway-loadbalancer.yaml  http-gateway-service.yaml  http-gateway.yaml  http-gateway.yml
scripts/: deploy-docs.sh  skaffold.install.sh
src/: application.rs  authn.rs  conf.rs  defaults.rs  errors.rs  event.rs  events.rs  headers_checker.rs  lib.rs  main.rs  serde.rs
src/actors/: mod.rs  mqtt_handler.rs  request_parser.rs
src/api/: mod.rs  rpc_call.rs
src/app/: config.rs  mod.rs
src/app/endpoint/: event.rs  metrics.rs  mod.rs
src/authn/: jwt.rs  mod.rs  serde.rs
src/extractors/: mod.rs  parsing.rs  rpc_call_extractor.rs
src/mqtt/: agent.rs  compat.rs  mod.rs  serde.rs
src/util/: headers.rs  http_stream.rs  mod.rs  mqtt_request.rs
src/web/: app.rs  mod.rs  request.rs
tests/: bridge_request.rs  send_event.rs
