[package]
name = "http-gateway"
version = "0.2.0"
authors = ["Artem Tolpekin <a.tolpekin@netology-group.ru>"]
edition = "2018"

[dependencies]
env_logger = "0.6"
log = "0.4"
failure = "0.1"
uuid = "0.7"

futures = "0.1"
futures-locks = "0.3"
crossbeam = "0.7"

serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
base64 = "0.10"
jsonwebtoken = "5.0"
config = "0.9"
http = "0.1"

tower-web = "0.3"
tower-service = "0.1"
tokio = "0.1"
reqwest = "0.9"
rumqtt = { version = "0.30" }

svc-authn = { version = "0.1", features = ["jose", "tower-web"] }
svc-agent = "0.1"

[patch.crates-io]
svc-agent = { git = "https://github.com/netology-group/svc-agent-rs.git", branch = "improve-publish-trait" }
svc-authn = { git = "https://github.com/netology-group/svc-authn-rs.git", branch = "add-missing-features" }