[package]
name = "http-gateway"
version = "0.3.2"
authors = ["Dmitry Shlagoff"]
edition = "2018"

[dependencies]
env_logger = "0.6"
log = "0.4"
chrono = "0.4"
config = "0.9"
failure = "0.1"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
http = "0.1"
reqwest = "0.9"
uuid = "0.7"
tokio = "0.1"
futures = "0.1"
futures-locks = "0.3"
tower-web = "0.3"
svc-authn = { version = "0.5", features = ["jose", "tower-web"] }
svc-agent = "0.12"
svc-error = { version = "0.1", features = ["sentry-extension"] }
