[package]
name = "http-gateway-integration-tests"
version = "0.2.2"
authors = ["Timofey Martynov"]
edition = "2018"

[dev-dependencies]
chrono = "0.4"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
http = "0.1"
reqwest = "0.9"
tower-web = "0.3"
svc-authn = { version = "0.5", features = ["jose", "tower-web"] }
svc-agent = { version = "0.9" }
http-gateway = { path = ".." }

[patch.crates-io]
svc-agent = { git = "https://github.com/netology-group/svc-agent-rs.git", branch = "feature/ULMS-711" }
