[package]
name = "http-gateway-integration-tests"
version = "0.3.0"
authors = ["Timofey Martynov"]
edition = "2018"

[dev-dependencies]
chrono = "0.4"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
http = "0.1"
reqwest = "0.9"
tower-web = "0.3"
svc-authn = { version = "0.5", features = ["jose", "tower-web"] }
svc-agent = "0.10"
http-gateway = { path = ".." }
